infrastructure/configs/argo-rollouts/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  parentRefs:
    - name: luzero-gateway
      namespace: istio-system
  hostnames:
    - argo-rollouts.luzero.online
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-rollouts-dashboard
          port: 3100
